--- a/src/less/crt/crt.less
+++ b/src/less/crt/crt.less
@@ -49,7 +49,8 @@
 .output {
   //animation: crt-output 10ms infinite; 
   background-color: @console-bg;
-  overflow: hidden;
+  overflow-y: auto;
+  -ms-overflow-style: none;
   position: absolute;
   pointer-events: auto;
   text-shadow: 0rem 0.2rem 1rem lighten(@console-bg,20%);
